--- a/install
+++ b/install
@@ -1,5 +1,21 @@
 #!/bin/bash
 
+# Console colors
+red='\033[0;31m'
+green='\033[0;32m'
+green_bg='\033[42m'
+yellow='\033[1;33m'
+NC='\033[0m'
+
+echo-red () { echo -e "${red}$1${NC}"; }
+echo-green () { echo -e "${green}$1${NC}"; }
+echo-green-bg () { echo -e "${green_bg}$1${NC}"; }
+echo-yellow () { echo -e "${yellow}$1${NC}"; }
+
+# Is .docksal installed already?
+if [[ -e .docksal ]]; then
+  echo-red "There is a .docksal directory already; not downloading"
+
 # use master as default branch?
 if [[ "$1" == "" ]]; then
   BRANCH=master
@@ -10,9 +26,10 @@ fi
 git clone -q --branch $BRANCH https://github.com/fjmk/docksal-template .docksal
 rm -rf .docksal/.git .docksal/install
 
-echo ".docksal template is installed."
+echo-green ".docksal template is downloaded."
 echo
-echo "Probably you want to customize .docksal/docksal.env"
-echo "... or add .docksal/docksal-local.env"
+echo-green-bg "Probably you want to customize .docksal/docksal.env"
+echo-green-bg "... or add .docksal/docksal-local.env"
 echo
-echo "Change .docksal/commands/init and .docksal/example.settings.local.php if needed."
+echo-yellow "Change .docksal/commands/init and .docksal/example.settings.local.php if needed."
+echo
